welcome.lessons.welcome.bat.bool1.CountTeen.scala.code
def countTeen(a:Int, b:Int,c:Int,d:Int): Int = {
	if ((a>=13 && a<=19)&&(b>=13 && b<=19)&&(c>=13 && c<=19)&&(d>=13 && d<=19)){"4"}
	if ((a>=13 && a<=19)&&(b>=13 && b<=19)&&(c>=13 && c<=19)||(d>=13 && d<=19)){"3"}
	if ((a>=13 && a<=19)&&(b>=13 && b<=19)||(c>=13 && c<=19)&&(d>=13 && d<=19)){"3"}
	if ((a>=13 && a<=19)||(b>=13 && b<=19)&&(c>=13 && c<=19)&&(d>=13 && d<=19)){"3"}
	if ((a>=13 && a<=19)&&(b>=13 && b<=19)||(c>=13 && c<=19)||(d>=13 && d<=19)){"2"}
	if ((a>=13 && a<=19)||(b>=13 && b<=19)||(c>=13 && c<=19)&&(d>=13 && d<=19)){"2"}
	if ((a>=13 && a<=19)||(b>=13 && b<=19)&&(c>=13 && c<=19)||(d>=13 && d<=19)){"2"}
	if ((a>=13 && a<=19)||(b>=13 && b<=19)||(c>=13 && c<=19)||(d>=13 && d<=19)){"1"}
}
	